--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,16 +1,17 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
+  <ion-toolbar color="danger">
+    <ion-title class="ms-5">
       Calculadora do Amor
+      <img src="../../assets/img/coracao.png" class="position-end">
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div class="mt-3 ms-3" style="font-size: 20px;">
+<ion-content [fullscreen]="true" color="secondary">
+  <div class="mt-5 ms-3" style="font-size: 20px;">
     <p>Calcule sua porcentagem com seu amor</p>
   </div>
-  <div id="container" class="justify-content-center mt-4">
+  <div id="container" class="justify-content-center mt-5">
     <div class="form-group d-flex justify-content-center">
       <form action="" id="form-nomes">
         <label>Insira seu nome</label>
@@ -23,11 +24,12 @@
         <input class="form-control" type="text" [(ngModel)]="nome2" name="nome2">
 
         <button type="button" class="btn btn-danger mt-3 ms-5" (click)="enviarDados()">Calcular</button>
-
-        <p [class.painel]="calculando" [class.scale-up-center]="!calculando" class="mt-3 text-center" id="resultado">{{ resultado }} % </p>
-        <p id="mensagem">{{ mensagem }}</p>
-        <img [class.d-none]="!imagem" src="../../assets/img/quernamorarcmg.jpg" alt="">
       </form>
+    </div>
+    <div>
+      <p [class.painel]="calculando" [class.scale-up-center]="!calculando" class="mt-3 text-center" id="resultado">{{ resultado }} % </p>
+      <p id="mensagem" class="ms-4">{{ mensagem }}</p>
+      <img [class.d-none]="!imagem" src="../../assets/img/quernamorarcmg.jpg" alt="">
     </div>
   </div>
 </ion-content>
